Replace Collectors.toList with Stream.toList
Closes gh-29203