@@ -22,7 +22,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import io.netty.handler.codec.http.HttpHeaders;
 
@@ -163,7 +162,7 @@ final class NettyHeadersAdapter implements MultiValueMap<String, String> {
 	@Override
 	public Collection<List<String>> values() {
 		return this.headers.names().stream()
-				.map(this.headers::getAll).collect(Collectors.toList());
+				.map(this.headers::getAll).toList();
 	}
 
 	@Override
