@@ -21,7 +21,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import reactor.blockhound.BlockHound;
 import reactor.blockhound.integration.BlockHoundIntegration;
@@ -170,13 +169,13 @@ public final class WebHttpHandlerBuilder {
 		List<WebFilter> webFilters = context
 				.getBeanProvider(WebFilter.class)
 				.orderedStream()
-				.collect(Collectors.toList());
+				.toList();
 		builder.filters(filters -> filters.addAll(webFilters));
 
 		List<WebExceptionHandler> exceptionHandlers = context
 				.getBeanProvider(WebExceptionHandler.class)
 				.orderedStream()
-				.collect(Collectors.toList());
+				.toList();
 		builder.exceptionHandlers(handlers -> handlers.addAll(exceptionHandlers));
 
 		context.getBeanProvider(HttpHandlerDecoratorFactory.class)
@@ -253,7 +252,7 @@ public final class WebHttpHandlerBuilder {
 					}
 				})
 				.filter(filter -> !(filter instanceof ForwardedHeaderTransformer))
-				.collect(Collectors.toList());
+				.toList();
 
 		this.filters.clear();
 		this.filters.addAll(filtersToUse);
